crates/procenv/tests/compile_fail/missing_env_attribute.rs
//! Test: Fields must have #[env(...)] attribute

use procenv::EnvConfig;

#[derive(EnvConfig)]
struct Config {
    db_url: String,
}

fn main() {}
