crates/procenv/tests/compile_fail/missing_env_attribute.stderr
error: Field `db_url` is missing #[env(...)] attribute
 --> tests/compile_fail/missing_env_attribute.rs:7:5
  |
7 |     db_url: String,
  |     ^^^^^^^^^^^^^^
